# firmware-rs

./: Cargo.toml  Embed.toml  README.md  rust-toolchain.toml  shell.nix
.cargo/: config.toml
.github/workflows/: rust-ci.yml
.zed/: settings.json
crates/drivers/adbms6830/: Cargo.toml  README.md
crates/drivers/adbms6830/examples/: init.rs
crates/drivers/adbms6830/src/: client.rs  lib.rs  registers.rs  types.rs
crates/drivers/adbms6830/src/types/: aux.rs  comm.rs  config.rs  misc.rs  mod.rs  pwm.rs  status.rs  voltage.rs
crates/drivers/lsm6dso-ner/src/: lib.rs  regs.rs
crates/drivers/pca9539-ner/src/: lib.rs
crates/drivers/sht3x-ner/src/: lib.rs
crates/drivers/vl6180x-ner/: Cargo.toml
crates/drivers/vl6180x-ner/src/: device_status.rs  i2c_interface.rs  init.rs  lib.rs  start_stop_measurements.rs
crates/lsm6dso-ner/: Cargo.toml
crates/pca9539-ner/: Cargo.toml
crates/sht3x-ner/: Cargo.toml
crates/vl6180x-ner/: Cargo.toml
crates/vl6180x-ner/src/: config.rs  mode.rs  read_measurements.rs  register.rs
crates/vl6180x-ner/src/mode/: continuous.rs  dynamic.rs  powered_off.rs  ready.rs
msb-fw-rs/: Cargo.toml
msb-fw-rs/src/: lib.rs  main.rs  readers.rs
projects/: README.md
projects/cerberus/: Cargo.toml
projects/cerberus/src/: bms.rs  can_handler.rs  dti.rs  fault.rs  lib.rs  main.rs  monitor.rs  state_machine.rs
projects/lightning/: Cargo.toml
projects/lightning/src/: main.rs
projects/msb-fw-2/: Cargo.toml
projects/msb-fw-2/src/: main.rs
projects/msb-fw-rs/: Cargo.toml
projects/msb-fw-rs/src/: can_handler.rs  controllers.rs  main.rs  readers.rs
projects/shepherd-3/: Cargo.toml
projects/shepherd-3/src/: main.rs
projects/template-h5/: Cargo.toml
projects/template-h5/src/: main.rs
projects/wheel/: Cargo.toml  build.rs
projects/wheel/src/: main.rs
