[workspace]
members = ["msb-fw-rs","crates/*"]
resolver = "2"

[workspace.dependencies]
embassy-stm32 = { version = "0.1.0", features = ["defmt", "stm32f405rg", "unstable-pac", "memory-x", "time", "time-driver-any", "exti"] }
embassy-sync = { version = "0.6.1", features = ["defmt"] }
embassy-executor = { version = "0.7.0", features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0",  features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-embedded-hal = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }

defmt = "0.3.10"
defmt-rtt = "0.4.1"

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"
embedded-hal = { version = "1.0.0", features = ["defmt-03"] }
embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
embedded-io = { version = "0.6.1", features = ["defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
panic-probe = { version = "0.3.2", features = ["print-defmt", "defmt-error"] }
heapless = { version = "0.8.0", default-features = false }
static_cell = "2.1.0"
#chrono = { version = "^0.4", default-features = false}
embedded-hal-async = {version = "1.0.0", features = ["defmt-03"] }
bitfield = "^0.17.0"


[patch.crates-io]
embassy-stm32 = {git = "https://github.com/embassy-rs/embassy", rev = "b127ca9844a7e4e9079800be81d173e2725066c6"}
embassy-sync = {git = "https://github.com/embassy-rs/embassy", rev = "b127ca9844a7e4e9079800be81d173e2725066c6"}
embassy-executor = {git = "https://github.com/embassy-rs/embassy", rev = "b127ca9844a7e4e9079800be81d173e2725066c6"}
embassy-time = {git = "https://github.com/embassy-rs/embassy", rev = "b127ca9844a7e4e9079800be81d173e2725066c6"}
embassy-embedded-hal = {git = "https://github.com/embassy-rs/embassy", rev = "b127ca9844a7e4e9079800be81d173e2725066c6"}
embassy-futures = {git = "https://github.com/embassy-rs/embassy", rev = "b127ca9844a7e4e9079800be81d173e2725066c6"}



[profile.release]
opt-level = "s"
lto = "fat"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
