[package]
edition = "2021"
name = "msb-fw-rs"
version = "0.1.0"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
embassy-embedded-hal.workspace = true
embassy-executor.workspace = true
embassy-stm32.workspace = true
embassy-sync.workspace = true
embassy-time.workspace = true
heapless.workspace = true
lsm6dso-ner = { version = "0.1.0", path = "../crates/lsm6dso-ner", optional = true }
panic-probe.workspace = true
sht3x-ner = { version = "0.1.0", path = "../crates/sht3x-ner", optional = true }
static_cell.workspace = true
vl6180x-ner = { version = "0.1.0", path = "../crates/vl6180x-ner", optional = true }

[features]
default = ["temp-sensor", "imu-sensor"]
tof-sensor =  ["dep:vl6180x-ner"]
temp-sensor = ["dep:sht3x-ner"]
imu-sensor = ["dep:lsm6dso-ner"]